kubernetes-kurssi/2/2.4/manifests/deployment-todo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app-frontend
          image: anteropaivarinta/todo-app-frontend:latest
        - name: todo-app-restapi
          image: anteropaivarinta/todo-app-restapi:latest
