kubernetes-kurssi/2/2.4/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-app-backend-svc
            port:
              number: 2346
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: todo-app-backend-svc
            port:
              number: 2346

      - path: /page
        pathType: Prefix
        backend:
          service:
            name: todo-app-svc
            port:
              number: 2347

      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-svc
            port:
              number: 2345
